<resources>
    <string name="app_name">BeautyBoost</string>
    <string name="rekomendasi_perawatan">Rekomendasi Perawatan</string>
    <string name="rekomendasi_produk">Produk Rekomendasi</string>
    <string name="gettingstarted_1.1">
        Get Instant Consult For\n
        Your Skin Face Problem</string>
    <string name="gettingstarted_1.2">Now you can check your skin problem within\n
        the app directly and get fast report  about your skin\n
        problem </string>
    <string name="gettingstarted_2.1">Find Trustworthy About\n
    Your Skin Treatment</string>
    <string name="gettingstarted_2.2">You will receive the most accurate information\n
        and treatment recommendations for your skin \n
        condition</string>
    <string name="web_client_id">986567722628-03178kc7pq6nmt2h16hm8mbbhslt0uo5.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="result">- LOADING -</string>

    <string name="low">  Selamat! Kulit wajah Anda tampak bersih dan bebas jerawat.\n
    Jaga kesehatan kulit dengan pola makan bergizi, minum air putih yang cukup, dan istirahat yang cukup.\n
        Gunakan pelembab wajah secara rutin untuk menjaga hidrasi kulit.
 </string>

    <string name="mid">  Terlihat beberapa jerawat di area wajah anda \n
    Gunakan produk skincare khusus untuk kulit berjerawat, seperti pembersih wajah yang lembut, toner, pelembab oil-free, dan obat jerawat \n
        Hindari memencet atau menyentuh jerawat agar tidak semakin parah. \n
        Konsultasikan dengan dokter kulit jika jerawat tidak kunjung membaik.
 </string>

    <string name="high">  Kulit wajah Anda terlihat kemerahan dan terdapat banyak jerawat \n
    Gunakan produk skincare khusus untuk kulit berjerawat, seperti pembersih wajah yang lembut, toner, pelembab oil-free, dan obat jerawat \n
        Hindari memencet atau menyentuh jerawat agar tidak semakin parah. \n
        Konsultasikan dengan dokter kulit jika jerawat tidak kunjung membaik.
    </string>
    <string name="placeholder_s">________________</string>
    <string name="placeholder_m">________________________________</string>
    <string name="placeholder_l">________________________________________________________________________________________________</string>

</resources>