<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultActivity">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/result_image"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_place_holder" />


                <ImageView
                    android:id="@+id/result_meter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/netral" />

                <TextView
                    android:id="@+id/result_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/result"
                    android:textSize="23sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_rekomendasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    app:cardCornerRadius="18dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:visibility="gone"
                            android:id="@+id/tv_title_recomendasi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/plusjakartasans_bold"
                            android:text="@string/rekomendasi_perawatan"
                            android:textColor="@color/black"
                            android:textSize="18dp" />

                        <TextView
                            android:visibility="gone"
                            android:id="@+id/result_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/plusjakartasans_regular"
                            android:text="@string/placeholder_l"
                            android:textColor="@color/dark"
                            android:textSize="14sp" />

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_title_recomendasi_produk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/plusjakartasans_bold"
                    android:text="@string/rekomendasi_produk"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <LinearLayout
                    android:id="@+id/ll_recomendasi_produk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/iv_produk"
                                android:layout_width="match_parent"
                                android:layout_height="170dp"
                                android:scaleType="fitCenter"
                                app:srcCompat="@drawable/ic_place_holder" />

                            <TextView
                                android:id="@+id/tv_produk"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/plusjakartasans_medium"
                                android:text="@string/app_name"
                                android:textAlignment="center"
                                android:textColor="@color/dark"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/iv_produk2"
                                android:layout_width="match_parent"
                                android:layout_height="170dp"
                                android:scaleType="fitCenter"
                                app:srcCompat="@drawable/ic_place_holder" />

                            <TextView
                                android:id="@+id/tv_produk2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/plusjakartasans_medium"
                                android:text="@string/app_name"
                                android:textAlignment="center"
                                android:textColor="@color/dark"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:id="@+id/ll_anim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_trans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/anim" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


